typhon-cluster/apps/audiobookshelf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - audiobooks.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
